2001-07-08 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (inset_info_to_tree): comment out the call
	to not expand the parent node. I think this might be
	causing a crash. Also add the term (thread) to any thread
	processes.

	*interface.c(create_main_window), infoview.c: instead of 
	setting certain widgets insensitive at startup, just send 
	an "unselect" signal.

	*interface.c: add menu items for renice and memory maps.

	*memmaps.c: changed cmd_label to command_label since I used
	the same variable in the infoview.

	*memmaps.c (create_memmaps_dialog): check to see if dialog
	already exists. Don't show two dialogs.

2001-07-07 Kevin Vandersloot <kfv101@psu.edu>

	*infoview.c (infoview_create): much improved info viewer

	*procman.h: removed infoview structure. Now the widgets are
	accessed as global variables deffined in infoview.c

	*procman.h: added new configuration variable to show the tree. 
	No UI to change it but one can do that in the .gnome 
	configuration file.

	*proctable.c (insert_info_to_tree): Use the new configration
	variable to show the tree. Also check to see if parent process
	has same memory total as well as same name to deterimine if it
	is a thread.

2001-07-05 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (remove_children_from_tree): remove the 
	e_tree_memory_node_remove call as it seems to cause some
	infinite looping.

	*also remove some c++ comments

2001-07-05 Kevin Vandersloot <kfv101@psu.edu>

	*prettytable.c (pretty_table_load_path): don't segfault if the
	directory doesn't exist

2001-07-04 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c(remove_children_from_tree): new function to
	remove all child info if a parent process is removed.

	*proctable.c (remove_info_from_tree): new function to remove
	a process.

	*interface.c (create_main_window): change gtk_wdiget_show to
	gtk_widget_show_all to fix a bug where the infoview state was
	not persistent

	*memmaps.c (get_memmaps_list): add e_tree_memory_freeze and thaw