@@ -1,5 +1,11 @@
 2001-07-08 Kevin Vandersloot <kfv101@psu.edu>
 
+	*proctable.c: add process status column
+
+	*procman.c: change default to show tree_view
+
+2001-07-08 Kevin Vandersloot <kfv101@psu.edu>
+
 	*proctable.c (inset_info_to_tree): comment out the call
 	to not expand the parent node. I think this might be
 	causing a crash. Also add the term (thread) to any thread
